# athena

./: .env.example  .gitignore  .gitleaks.toml  .gitlint  .worktreeinclude  AGENTS.md  CLAUDE.md  CONTEXT.md  GEMINI.md  README.md  TODO.md  alembic.ini  bancho_server_design.md  devenv.nix  devenv.yaml  flake.nix  hosts.example  nginx.dev.conf  nginx.dev.conf.example  process-compose.yml  pyproject.toml  skills-lock.json
.agents/rules/: code-quality.md  e2e-verification.md  git-commit-rules.md  mcp-tools.md  rtk-usage.md  type-safety-policy.md
.claude/rules/: architecture.md  code-quality.md  config-file-policy.md  design-philosophy.md  development.md  e2e-verification.md  git-commit-rules.md  mcp-tools.md  ooui-design.md  operations.md  senior-engineer-conduct.md  type-safety-policy.md
.codex/: hooks.json
.codex/agents/: spec-reviewer.toml
.github/workflows/: ci.yml
.kiro/steering/: roadmap.md  scaling.md  tech.md
alembic/: env.py
alembic/versions/: 20260522_0811_create_users_roles_tables.py  20260525_2100_create_channels_messages_tables.py  20260604_1846_create_blobs_table.py  20260604_2001_create_beatmap_mirror_tables.py  20260612_0016_add_score_submission_tables.py  20260612_0021_rename_replays_to_replay_file_attachments.py  20260612_0022_use_blob_id_for_replay_file_attachments.py  20260613_0023_add_score_submission_diagnostics.py  20260616_0100_add_score_performance_calculations.py  20260617_0101_add_personal_bests.py  20260617_0102_create_user_friend_relationships.py  20260618_0100_add_beatmap_leaderboard_projection.py  20260628_0100_add_score_timing_fields.py  20260628_0200_add_beatmap_performance_bests.py  20260630_0100_add_beatmap_status_dates.py  20260630_0200_add_current_user_stats.py  20260630_0300_add_beatmap_submission_counts.py  20260707_0100_add_score_replay_view_count.py  20260707_0200_add_user_latest_activity.py  20260710_0100_sync_users_id_sequence.py  20260710_0100_use_enum_types_and_explicit_leaderboard_scope.py  20260710_0200_add_score_replay_view_count.py  20260710_0200_use_enum_types_and_explicit_leaderboard_scope.py  20260710_0300_add_user_latest_activity.py  20260710_0400_use_enum_types_and_score_based_leaderboards.py  20260712_0500_repair_legacy_leaderboard_projection.py  20260713_0600_add_mod_scoped_leaderboard_projection.py  20260713_0700_create_leaderboard_indexes_concurrently.py
athena-crypto/: Cargo.toml  pyproject.toml
athena-crypto/src/: lib.rs
athena-crypto/tests/unit/infrastructure/crypto/: test_score_crypto.py
cloudflared/: config.yml.example
docs/: architecture.md  stable-compatibility-guide.md  stable-compatibility-matrix.md
docs/adr/: 0001-rijndael-256-pyo3-implementation.md  0002-adopt-dishka-for-composition-di.md  0003-separate-local-distributed-and-durable-events.md  0004-cache-hibp-range-responses-for-password-safety-checks.md  0005-adopt-open-source-monorepo-web-app.md  0006-adopt-nextjs-for-web-app.md  0007-treat-web-app-api-as-exposed-first-party-surface.md  0008-use-server-side-session-cookies-for-web-app-auth.md  0009-require-csrf-token-gate-for-web-app-api.md  0010-store-api-tokens-as-hashed-credentials.md  0011-store-public-api-idempotency-records-durably.md  0012-stable-userstats-userpresence-wire-format.md
gitlint_rules/: forbidden_words.py
scripts/: agent-worktree.sh  ci.sh  dev-tasks.sh
src/athena_cli/: __init__.py  context.py  errors.py  main.py  presentation.py  prompts.py  runners.py
src/osu_server/: __main__.py  app.py  config.py  db.py  worker.py
tests/: README.md  conftest.py
tests/e2e/: test_beatmap_file_resolution.py  test_beatmap_metadata_resolution.py  test_c2s_e2e.py
tests/factories/: __init__.py  beatmap.py  config.py  crypto_factory.py  domain.py  multipart_factory.py  score_factory.py  test_crypto_factory.py
tests/integration/: test_app_startup.py  test_authorization_refresh.py  test_beatmap_leaderboard_reconciliation.py  test_blob_storage_sqlalchemy.py  test_c2s_pipeline.py  test_chat_e2e.py  test_chat_pipeline.py  test_database.py  test_enum_scope_migration_postgresql.py  test_friend_relationship_pipeline.py  test_getscores_diagnostics.py  test_getscores_endpoint.py  test_getscores_status_fixtures.py  test_getscores_unavailable_paths.py  test_login_flow.py  test_polling_e2e.py  test_redis.py  test_redis_packet_queue.py  test_redis_session_store.py  test_registration_atomicity.py  test_registration_flow.py  test_score_submission_integration.py  test_sqlalchemy_beatmap_fetch_state_repository.py  test_sqlalchemy_replay_download_query_repository.py  test_sqlalchemy_replay_repository.py  test_sqlalchemy_score_repository.py  test_sqlalchemy_submission_repository.py  test_user_stats_game_flow.py  test_valkey.py  test_valkey_packet_queue.py  test_valkey_session_store.py
tests/support/: __init__.py  app.py  beatmaps.py  credentials.py  fakes.py  getscores_contract.py  persistence.py  runtime_assertions.py  service_availability.py  starlette_requests.py
tests/unit/: test_architecture_baseline.py  test_architecture_boundary_contract.py  test_architecture_package_skeletons.py  test_blob_config.py  test_di_integration.py  test_event_boundaries.py  test_forbidden_words.py  test_handler_group.py  test_job_boundaries.py  test_lifecycle_handlers.py  test_lifecycle_listeners.py  test_listener_group.py  test_log_rotation.py  test_osu_server_main.py  test_routing.py  test_worker.py  test_worker_jobs.py
typings/athena_crypto/: __init__.pyi
typings/caterpillar/: _C.pyi  __init__.pyi  __main__.pyi  _common.pyi  abc.pyi  byteorder.pyi  c.pyi  context.pyi  exception.pyi  options.pyi  py.pyi  registry.pyi  shared.pyi  shortcuts.pyi  types.pyi
typings/glide/: __init__.pyi  glide.pyi  glide_client.pyi  logger.pyi  opentelemetry.pyi
typings/glide_shared/: __init__.pyi  cache.pyi  config.pyi  constants.pyi  exceptions.pyi  opentelemetry.pyi  protobuf_codec.pyi  routes.pyi
typings/httpx/: __init__.pyi  __version__.pyi  _api.pyi  _auth.pyi  _client.pyi  _config.pyi  _content.pyi  _decoders.pyi  _exceptions.pyi  _main.pyi  _models.pyi  _multipart.pyi  _status_codes.pyi  _types.pyi  _urls.pyi  (+2 more)
(+1235 files in other folders)
