[project]
name = "athena"
version = "0.1.0"
description = "osu! bancho compatible private server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "starlette",
    "uvicorn",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "valkey-glide>=2.1",
    "argon2-cffi",
    "caterpillar-py>=2.8.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.29",
    "structlog>=25.5.0",
    "taskiq>=0.11",
    "taskiq-redis>=1.0",
    "typer>=0.26.7",
    "inquirerpy>=0.3.4",
]

[project.scripts]
athena = "athena_cli.main:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "ruff",
    "basedpyright",
    "import-linter",
    "gitlint-core",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osu_server", "src/athena_cli"]

# --- Code Quality Tools ---

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "RUF",    # ruff-specific
]
ignore = [
    "ISC001",   # conflicts with ruff formatter
    "TRY003",   # overly strict exception message rule
    "PLR0913",  # too many arguments (common in DI)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]  # Magic numbers are common/expected in test assertions
"tests/unit/transports/bancho/test_di_registration.py" = ["PLC0415"]  # Requires local import to test laziness
"tests/integration/test_login_flow.py" = ["PLC0415"]
"tests/integration/test_polling_e2e.py" = ["PLC0415"]
"tests/integration/test_registration_flow.py" = ["PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["osu_server", "athena_cli"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
pythonVersion = "3.14"
pythonPlatform = "Linux"
typeCheckingMode = "all"
venvPath = ".devenv/state"
venv = "venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.importlinter]
root_packages = ["osu_server", "athena_cli"]

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "osu_server.transports",
    "osu_server.jobs",
    "osu_server.services",
    "osu_server.repositories",
    "osu_server.domain",
    "osu_server.infrastructure",
    "osu_server.shared",
]

[[tool.importlinter.contracts]]
name = "Services don't depend on transports"
type = "forbidden"
source_modules = ["osu_server.services"]
forbidden_modules = ["osu_server.transports"]

[[tool.importlinter.contracts]]
name = "Jobs only depend on approved layers"
type = "forbidden"
source_modules = ["osu_server.jobs"]
forbidden_modules = [
    "osu_server.transports",
    "osu_server.composition",
    "osu_server.repositories.sqlalchemy",
    "osu_server.infrastructure.database",
]

[[tool.importlinter.contracts]]
name = "Transports don't depend on jobs"
type = "forbidden"
source_modules = ["osu_server.transports"]
forbidden_modules = ["osu_server.jobs"]

[[tool.importlinter.contracts]]
name = "Domain has no I/O dependencies"
type = "forbidden"
source_modules = ["osu_server.domain"]
forbidden_modules = [
    "osu_server.repositories",
    "osu_server.infrastructure",
    "osu_server.transports",
]
